Retirando o menu suspenso

--- a/TurmaOnline/web/main.xhtml
+++ b/TurmaOnline/web/main.xhtml
@@ -12,9 +12,9 @@
                 <f:view locale="#{context.currentLocale}">
                     <h:form>
                         <rich:toolBar>
-                            <rich:dropDownMenu value="#{i18n['menu.label.main']}">
+                            <!-- <rich:dropDownMenu value="#{i18n['menu.label.main']}"> -->
                                 <e:menuItems/>
-                            </rich:dropDownMenu>
+                            <!-- </rich:dropDownMenu> -->
 
                             <!--<rich:dropDownMenu value="#{i18n['menu.label.setup']}">
                                 <rich:menuItem value="#{i18n['menu.label.theme']}">
