--- a/TurmaOnline/web/main.xhtml
+++ b/TurmaOnline/web/main.xhtml
@@ -31,6 +31,7 @@
                                     <e:languages/>
                                 </rich:menuItem>
                             </rich:dropDownMenu>-->
+                            <h:outputText value="Usuário: #{context.currentUser().userName()}" />
                         </rich:toolBar>
                     </h:form>
                 </f:view>
