1.Alterar não exibir nome do usuário sem estar logado 3.Deletar Turma 5.apos o upload do aruqivo nao volta pra "minhas turmas" 6.em "Conteúdos da turma" ainda nao consigo fazer o download 6.como aluno ainda noa consigo fazer o download dos arquivos da minha turma 7.nao pode deixar o aluno excluir o conteudo da turma só o professor pode 8.vamos troca "minhas disciplinas" por minhas turmas, acho que fica melhor e mais generico 9.o sistema ta deixa eu me cadastrar duas vezes na mesma turma 11. o aluno nao tem como sair da turma. 12. na view Alunos da Turma do professor , exibir o email do aluno t13.tira a quant. de faltas da tela "Alunos da Turma" do perfil aluno

--- a/TurmaOnline/web/main.xhtml
+++ b/TurmaOnline/web/main.xhtml
@@ -31,7 +31,9 @@
                                     <e:languages/>
                                 </rich:menuItem>
                             </rich:dropDownMenu>-->
-                            <h:outputText value="Usuário: #{context.currentUser().userName()}" />
+                            <!-- <h:outputText value="Usuário: #{context.currentUser().userName()}"  /> -->
+                            <h:outputText value="#{context.currentUser().userName()!=null ? 'Usuário: ' : '' }"/>
+                            <h:outputText value="#{context.currentUser().userName()!=null ? context.currentUser().userName() : '' }"/>
                         </rich:toolBar>
                     </h:form>
                 </f:view>
